welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:13: error: ')' expected but ';' found.
avance(); 
        ^